--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,31 @@
   "name": "online-booking-system-server",
   "version": "0.1.0",
   "dependencies": {
-    "express": "^4.17.2"
+    "apollo-server-express": "^2.7.0",
+    "express": "^4.17.2",
+    "graphql": "^14.7.0",
+    "mongodb": "^4.3.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "dotenv": "^14.2.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "start": "nodemon src/"
-  }
+    "start": "nodemon src/index.ts",
+    "build": "tsc -p ./"
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
