--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2020",
     "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./build",
     "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "exclude": ["temp"]
 }
