--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "tsc -p ./"
+    "build": "tsc -p ./",
+    "seed": "ts-node temp/seed.ts"
   },
   "main": "index.js",
   "author": "",
