--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,13 @@
     "apollo-server-express": "^2.7.0",
     "express": "^4.17.2",
     "graphql": "^14.7.0",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/lodash.merge": "^4.6.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
