--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
+    "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "antd": "^4.18.4",
-    "apollo": "^2.33.9",
-    "graphql": "^16.2.0",
+    "@types/react-router-dom": "^5.3.2",
+    "antd": "^4.18.3",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "codegen:schema": "npx apollo client:download-schema --endpoint=http://localhost:9000/api",
-    "codegen:generate": ""
+    "codegen:generate": "npx apollo client:codegen --localSchemaFile=schema.json --includes=src/**/*.tsx --globalTypesFile=./src/lib/graphql/globalTypes.ts --target=typescript"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "devDependencies": {
+    "apollo": "^2.33.9"
+  },
+  "resolutions": {
+    "graphql": "^15.8.0"
+  }
 }
