setting Cookie to server

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "apollo-server-express": "^2.7.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "googleapis": "^92.0.0",
     "graphql": "^14.7.0",
@@ -10,6 +11,7 @@
     "mongodb": "^4.3.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/lodash.merge": "^4.6.6",
